--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,27 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#############
+## IntelliJ
+#############
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+
+
+#############
+## Maven
+#############
+target/
+
+
+#############
+## Gradle
+#############
+build/
+.gradle/
+classes/
+gradle/
